--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ set -g display-time 0
 set -g history-limit 8192
 set -g lock-after-time 300
 set -g lock-command 'pipes.sh -B -r 3000 -f 40 -p 3 -c{1..7}'
+set -g allow-rename off
 
 # Copy & Paste stuff
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xsel -ib'
@@ -26,7 +27,7 @@ bind w if-shell -F "#{window_zoomed_flag}" "select-pane -t :.+; resize-pane -Z" 
 bind % split-window -h -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 # Insert window at the next index, not at the end, also in same directory
-bind C new-window -a -c '#{pane_current_path}'
+bind C run-shell "tmux new-window -a -c '#{pane_current_path}' -n \"$(tmux display -p '#W')\""
 
 # Pane navigation
 bind h select-pane -L
