--- a/config/picom.conf
+++ b/config/picom.conf
@@ -32,7 +32,7 @@ glx-no-stencil = true;
 # Useless with --glx-use-copysubbuffermesa.
 # Partially breaks --resize-damage.
 # Defaults to undefined.
-glx-swap-method = "-1";
+use-damage = true;
 
 #################################
 #
@@ -42,12 +42,6 @@ glx-swap-method = "-1";
 
 # Enabled client-side shadows on windows.
 shadow = false;
-# Don't draw shadows on DND windows.
-no-dnd-shadow = true;
-# Avoid drawing shadows on dock/panel windows.
-no-dock-shadow = true;
-# Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
-clear-shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 5;
 # The left offset for shadows. (default -15)
@@ -95,12 +89,10 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 1;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
@@ -171,16 +163,11 @@ refresh-rate = 0;
 # opengl-swc: Try to VSync with SGI_swap_control OpenGL extension. Only work on some drivers. Works only with GLX backend. Known to be most effective on many drivers. Does not actually control paint timing, only buffer swap is affected, so it doesn’t have the effect of --sw-opti unlike other methods. Experimental.
 # opengl-mswc: Try to VSync with MESA_swap_control OpenGL extension. Basically the same as opengl-swc above, except the extension we use.
 # (Note some VSync methods may not be enabled at compile time.)
-vsync = "opengl-swc";
+vsync = true;
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
 dbe = false;
-
-# Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
-# This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
-# unless you wish to specify a lower refresh rate than the actual value.
-sw-opti = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [ ];
@@ -209,6 +196,18 @@ wintypes:
         opacity = 0.85;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
+    };
+    dock = {
+        shadow = false;
+    };
+    dnd = {
+        shadow = false;
+    };
+    popup_menu = {
+        opacity = 1;
+    };
+    dropdown_menu = {
+        opacity = 1;
     };
 };
 #inactive-dim = 0.3;
