--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,9 @@ set -g history-limit 8192
 set -g lock-after-time 300
 set -g lock-command 'pipes.sh -B -r 3000 -f 40 -p 3 -c{1..7}'
 set -g allow-rename off
+set -g monitor-bell on
+set -g bell-action any
+set-hook -g alert-bell 'run-shell "aplay /usr/share/doc/soundpipe/examples/kick.wav"'
 
 # Copy & Paste stuff
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xsel -ib'
