--- a/tmux.conf
+++ b/tmux.conf
@@ -77,7 +77,7 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @continuum-restore 'on'
+set -g @continuum-restore 'on'
 
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
