--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -64,6 +64,9 @@ window:
 
   # Window title
   #title: Alacritty
+  # Allow terminal applications to change Alacritty's window title.
+  dynamic_title: true
+
 
   # Window class (Linux only):
   #class: Alacritty
@@ -88,7 +91,7 @@ font:
     #   - (Linux) monospace
     #   - (Windows) Consolas
     # family: Fira Code
-    family: Iosevka
+    family: JetBrains Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -116,7 +119,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 7.0
+  size: 6.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -246,7 +249,7 @@ colors:
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
+bell:
   animation: EaseOutSine
   duration: 50
   color: '0xffffff'
@@ -299,9 +302,9 @@ mouse:
     #   - (macOS) open
     #   - (Linux) xdg-open
     #   - (Windows) explorer
-    #launcher:
-    #  program: xdg-open
-    #  args: []
+    launcher:
+      program: qutebrowser
+      args: []
 
     # URL modifiers
     #
@@ -314,9 +317,6 @@ selection:
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: false
-
-# Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
 
 cursor:
   # Cursor style
