--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -91,7 +91,7 @@ font:
     #   - (Linux) monospace
     #   - (Windows) Consolas
     # family: Fira Code
-    family: JetBrains Mono
+    family: Iosevka
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
