--- a/config/redshift/redshift.conf
+++ b/config/redshift/redshift.conf
@@ -22,8 +22,8 @@ fade=1
 ; Instead of using the solar elevation, the time intervals of dawn and dusk
 ; can be specified manually. The times must be specified as HH:MM in 24-hour
 ; format.
-dawn-time=6:00-7:45
-dusk-time=18:00-19:30
+; dawn-time=6:00-7:45
+; dusk-time=18:00-19:30
 
 ; Set the screen brightness. Default is 1.0.
 ;brightness=0.9
@@ -43,7 +43,7 @@ gamma=0.8
 ; Set the location-provider: 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
 ; The location provider settings are in a different section.
-location-provider=geoclue2
+location-provider=manual
 
 ; Set the adjustment-method: 'randr', 'vidmode'
 ; type 'redshift -m list' to see all possible values.
@@ -57,9 +57,9 @@ adjustment-method=randr
 ; ex: 'redshift -l manual:help'
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
-;[manual]
-;lat=48.1
-;lon=11.6
+[manual]
+lat=40.11
+lon=-88.23
 
 ; Configuration of the adjustment-method
 ; type 'redshift -m METHOD:help' to see the settings.
