--- a/config/starship.toml
+++ b/config/starship.toml
@@ -3,6 +3,7 @@ show_always = true
 
 [time]
 disabled = false
+format = "[$time](bold yellow) "
 
 [python]
 disabled = true
@@ -12,8 +13,8 @@ disabled = false
 threshold = 85
 
 [character]
-symbol = "\ue0b0"
-vicmd_symbol = "\ue0b2"
+success_symbol = "[\ue0b0](bold green)"
+vicmd_symbol = "[\ue0b2](bold green)"
 
 [git_commit]
 disabled = false
