--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -74,7 +74,7 @@ window:
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
-  history: 10000
+  history: 1024
 
   # Number of lines the viewport will move for every line scrolled when
   # scrollback is enabled (history > 0).
@@ -91,7 +91,7 @@ font:
     #   - (Linux) monospace
     #   - (Windows) Consolas
     # family: Fira Code
-    family: Iosevka
+    family: "Iosevka Term"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
