--- a/config/redshift/redshift.conf
+++ b/config/redshift/redshift.conf
@@ -29,11 +29,11 @@ fade=1
 ;brightness=0.9
 ; It is also possible to use different settings for day and night
 ; since version 1.8.
-;brightness-day=1.0
+brightness-day=1.0
 brightness-night=0.6
 ; Set the screen gamma (for all colors, or each color channel
 ; individually)
-gamma=0.8
+gamma=1
 ;gamma=0.8:0.7:0.8
 ; This can also be set individually for day and night since
 ; version 1.10.
