--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,8 @@ set -g set-titles on
 set -g set-titles-string '#S / #W'
 set -g display-time 0
 set -g history-limit 8192
-set -g lock-after-time 300
-set -g lock-command 'pipes.sh -B -r 3000 -f 40 -p 3 -c{1..7}'
+# set -g lock-after-time 600
+# set -g lock-command 'pipes.sh -B -r 3000 -f 40 -p 3 -c{1..7}'
 set -g allow-rename off
 set -g monitor-bell on
 set -g bell-action any
@@ -18,7 +18,7 @@ set-hook -g alert-bell 'run-shell "aplay /usr/share/doc/soundpipe/examples/kick.
 # Copy & Paste stuff
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xsel -ib'
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xsel -ib'
-bind -T root MouseDown2Pane run-shell 'tmux set-buffer "$(xsel -ob)" && tmux paste-buffer'
+bind -T root MouseDown2Pane run-shell 'tmux set-buffer -- "$(xsel -ob)" && tmux paste-buffer'
 bind ] run-shell 'tmux set-buffer -- "$(xsel -ob)" && tmux paste-buffer'
 
 # More keybinds
@@ -39,9 +39,20 @@ bind k select-pane -U
 bind l select-pane -R
 bind \\ select-window -l
 
+bind -r M-Up    resize-pane -U
+bind -r M-Down  resize-pane -D
+bind -r M-Left  resize-pane -L
+bind -r M-Right resize-pane -R
+bind -r C-Up    resize-pane -U 5
+bind -r C-Down  resize-pane -D 5
+bind -r C-Left  resize-pane -L 5
+bind -r C-Right resize-pane -R 5
+
 # Window movement
-bind -r S-Left swap-window -t -1
-bind -r S-Right swap-window -t +1
+bind -r S-Up swap-pane -U
+bind -r S-Down swap-pane -D
+bind -r S-Left swap-window -t -1 \; prev
+bind -r S-Right swap-window -t +1 \; next
 bind -n MouseDown1StatusLeft choose-tree -Zw
 bind -n WheelDownStatusLeft switch-client -n
 bind -n WheelUpStatusLeft switch-client -p
@@ -74,6 +85,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'dmesg htop vimpc'
 set -g @resurrect-strategy-nvim 'session'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
