--- a/.gitmodules
+++ b/.gitmodules
@@ -247,3 +247,21 @@
 [submodule "vim/bundle/popup.nvim"]
 	path = vim/bundle/popup.nvim
 	url = https://github.com/nvim-lua/popup.nvim
+[submodule "vim/bundle/nvim-cmp"]
+	path = vim/bundle/nvim-cmp
+	url = https://github.com/hrsh7th/nvim-cmp
+[submodule "vim/bundle/cmp-nvim-lsp"]
+	path = vim/bundle/cmp-nvim-lsp
+	url = https://github.com/hrsh7th/cmp-nvim-lsp
+[submodule "vim/bundle/cmp-path"]
+	path = vim/bundle/cmp-path
+	url = https://github.com/hrsh7th/cmp-path
+[submodule "vim/bundle/cmp-cmdline"]
+	path = vim/bundle/cmp-cmdline
+	url = https://github.com/hrsh7th/cmp-cmdline
+[submodule "vim/bundle/cmp-buffer"]
+	path = vim/bundle/cmp-buffer
+	url = https://github.com/hrsh7th/cmp-buffer
+[submodule "vim/bundle/vim-vsnip"]
+	path = vim/bundle/vim-vsnip
+	url = https://github.com/hrsh7th/vim-vsnip
