--- a/config/redshift/redshift.conf
+++ b/config/redshift/redshift.conf
@@ -22,8 +22,8 @@ fade=1
 ; Instead of using the solar elevation, the time intervals of dawn and dusk
 ; can be specified manually. The times must be specified as HH:MM in 24-hour
 ; format.
-; dawn-time=6:00-7:45
-; dusk-time=18:00-19:30
+dawn-time=6:00-7:45
+dusk-time=18:00-19:30
 
 ; Set the screen brightness. Default is 1.0.
 ;brightness=0.9
