--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -71,6 +71,13 @@ window:
   # Window class (Linux only):
   #class: Alacritty
 
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 1.0
+
+
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
@@ -119,7 +126,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 11.5
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -250,15 +257,9 @@ colors:
 #
 # Specifying a `duration` of `0` will disable the visual bell.
 bell:
-  animation: EaseOutSine
-  duration: 50
+  animation: EaseOutExpo
+  duration: 150
   color: '0xffffff'
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
 
 # Mouse bindings
 #
@@ -290,7 +291,7 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
+  hints:
     # URL launcher
     #
     # This program is executed when clicking on a text which is recognized as a URL.
