--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,6 @@ set -g history-limit 65536
 set -g allow-rename off
 set -g monitor-bell on
 set -g bell-action any
-set-hook -g alert-bell 'run-shell "aplay /usr/share/doc/soundpipe/examples/kick.wav"'
 
 # Copy & Paste stuff
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xsel -ib'
@@ -66,7 +65,7 @@ bind ` send-prefix
 bind R source-file ~/.tmux.conf
 
 # Fast escapes
-set -sg escape-time 10
+set -sg escape-time 1
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -85,7 +84,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-processes 'dmesg htop vimpc'
+set -g @resurrect-processes 'dmesg htop vimpc btop'
 set -g @resurrect-strategy-nvim 'session'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
