--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,10 @@ bind -r C-Down  resize-pane -D 5
 bind -r C-Left  resize-pane -L 5
 bind -r C-Right resize-pane -R 5
 
+bind = select-layout tiled
+bind | join-pane -h -s !
+bind _ join-pane -v -s !
+
 # Window movement
 bind -r S-Up swap-pane -U
 bind -r S-Down swap-pane -D
